# mcp-for-splunk

./: .bandit  .cursorrules  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  .semgrep.yml  .yamllint.yml  AGENTS_REMOVAL_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIB_WORKFLOW_COUNT_FIX.md  CONTRIB_WORKFLOW_FIX.md  CONTRIB_WORKFLOW_RUNNER_FIX.md  DYNAMIC_AGENTS_SOLUTION.md  DYNAMIC_AGENTS_TEST_RESULTS.md  Dockerfile  ENHANCED_AGENT_SUMMARY.md  GOVERNANCE.md  HOT_RELOAD_GUIDE.md  Makefile  NEXT_STEPS.md  PARALLEL_AGENTS.md  README.md  README_TESTING.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  RULESET_TEST.md  SECURITY.md  SUMMARY.md  TESTING_GUIDE.md  TEST_README.md  TOOL_ENHANCEMENTS.md  TRACING_FIXES_SUMMARY.md  TRACING_IMPLEMENTATION_SUMMARY.md  bug.md  (+31 more)
.cursor/: cli.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
contrib/: README.md  __init__.py
docs/: README.md  README_IMPROVEMENTS.md  SESSION_MANAGEMENT.md  WINDOWS_GUIDE.md  agents-as-tools-readme.md  business-case.md  client_configuration.md  deployment_guide.md  embedded_resources.md  migration_guide.md  readme-guide.md  tests.md  workflows-overview.md
examples/: advanced_prompt_demo.py  client_config_demo.py  documentation_resources_demo.py  dynamic_agents_demo.py  enhanced_openai_agent_demo.py  openai_agent_demo.py  prompt_system_demo.py  splunk_agent_patterns_demo.py  test_agent_tracing.py  test_enhanced_agent.py  test_handoff_troubleshooting.py  workflow_builder_demo.py  workflow_runner_demo.py
lic/: splunk.lic
prds/: business-case.md  main-prd-mcp-server-for-splunk.md  mvp-prd.md
scripts/: README_test_headers.md  build_and_run.bat  (+23 more)
(+358 files in other folders)
