[project]
name = "mcp-server-for-splunk"
version = "0.1.0"
description = "MCP server for Splunk"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.8.1",
    "splunk-sdk>=1.7.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=2.3.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--color=yes",
    "--durations=10"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests",
    "network: Tests that require network access",
    "splunk: Tests that require Splunk connection"
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:fastmcp.*",
    "ignore::UserWarning:splunklib.*"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
